updated and fixed the blank div bug, repeated listings of cities, white space

--- a/style.css
+++ b/style.css
@@ -19,6 +19,11 @@ body{
     background: #Def2f1;
     padding: 10px;
 }
+.cityList{
+    text-align:center;
+    padding:25px;
+    margin:10px;
+}
 
 #searchBar{
     margin-left:25px;
